objects/LLC_BI__Lien__c.object
<CustomObject>
    <description>This exists on a piece of Collateral when it is currently pledged against a Loan.</description>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the lien is active it will be used in current and prior lien calculations.</description>
        <inlineHelpText>If the lien is active it will be used in current and prior lien calculations</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This is a user updated field. The lien amount against a piece of collateral.</description>
        <inlineHelpText>The lien amount against a piece of collateral.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <description>This field is required and is a lookup to the collateral that is part of the Lien. When a loan is booked, the automatic lien creation will link it to the pledged collateral. This can also be manually populated.</description>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Liens</relationshipLabel>
        <relationshipName>Liens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expire_Date__c</fullName>
        <description>This is a user updated field. The date the lien has been paid out.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date the lien has been paid out.</inlineHelpText>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Institution__c</fullName>
        <description>This is a user updated field. The institution that has the lien against the piece of collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The institution that has the lien against the piece of collateral.</inlineHelpText>
        <label>Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Created_From_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically calculated. Is the lien automatically created from collateral on a booked loan.</description>
        <inlineHelpText>Is the lien automatically created from collateral on a booked loan?</inlineHelpText>
        <label>Is Created From Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is populated via apex to exclude this lien from calculations.</description>
        <inlineHelpText>This field is populated via apex to exclude this lien from calculations.</inlineHelpText>
        <label>Is Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Internal__c</fullName>
        <description>This field is auto-populated and indicates if the lien was created in the system by the booking of a loan.</description>
        <formula>LLC_BI__Loan__c != NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Number__c</fullName>
        <description>This field is manually populated. This is the Loan Number for the Loan the Lien looks up to.</description>
        <formula>LLC_BI__Loan__r.LLC_BI__lookupKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically calculated. The loan that this lien is tied to, if the lien is within this financial institution.</description>
        <inlineHelpText>The loan that this lien is tied to, if the lien is within this financial institution.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Liens</relationshipLabel>
        <relationshipName>Liens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Position__c</fullName>
        <description>This is a user updated field. The order in which liens will be repaid when the property is transferred to a new owner.</description>
        <inlineHelpText>The order in which liens will be repaid when the property is transferred to a new owner.</inlineHelpText>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lien</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Lien Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>